--- a/app.json
+++ b/app.json
@@ -3,16 +3,24 @@
   "description": "Deploy Gost to Heroku.",
   "keywords": ["Gost"],
   "env": {
-    "METHOD": {
-       "description": "Encryption method, null by default(table), the following methods are supported: aes-128-cfb, aes-192-cfb, aes-256-cfb, bf-cfb, cast5-cfb, des-cfb, rc4-md5, rc4-md5-6, chacha20, salsa20, rc4, table.",
-       "value": "chacha20"
+     "WSPATH": {
+       "description": "The web path for WebSocket Processing. Value:/pathstr",
+       "value": "/catpxy"
      },
-     "PASSWORD": {
-       "description": "A password used to encrypt transfer.",
-       "value": "ss123456"
-     }
+    "READBUFFSIZE": {
+       "description": "Read Buffer Byte Size for the WebSocket. Value:integer",
+       "value": "8192"
+     },
+    "WRITEBUFFSIZE": {
+       "description": "Write Buffer Byte Size for the WebSocket. Value:integer",
+       "value": "8192"
+     },
+    "WSCOMPR": {
+       "description": "Enable/Disable the compression of the WebSocket. Value:true/false",
+       "value": "false"
+     },
   },
   "stack": "container",
-  "website": "https://github.com/xiaokaixuan/gost-heroku",
-  "repository": "https://github.com/xiaokaixuan/gost-heroku"
- }
+  "website": "https://github.com/nightcat007/gost-heroku",
+  "repository": "https://github.com/nightcat007/gost-heroku"
+}
